added DOM manipulation elements

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <div class="col-sm-12" id="searchResults">
                 <nav>
                     <button class="prev" id="previousBtn">
-                        <img src='./assets/giphy.svg' id="previousBtnImg">-
+                        TAKE IT BACK!
                     </button>
                     <button class="next" id="nextBtn"/>
-                        <img src='./assets/giphy.svg'id="nextBtnImg"/>+
+                        ANOTHER!
                     </button>
                   </nav>
                    <!-- Search Results Here -->
